chore(gv-version): compiler warning